关联去除已选择的

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="theme-color" content="#000000">
+
+<!--        <link rel="icon" type="image/png" href="%PUBLIC_URL%/src/assets/img/log.png" />-->
     </head>
     <body>
         <div id="container" style="height: 100%;overflow: hidden"></div>
