页面细节优化

--- a/src/assets/iconfont/demo_index.html
+++ b/src/assets/iconfont/demo_index.html
@@ -55,9 +55,9 @@
           <ul class="icon_lists dib-box">
           
             <li class="dib">
-              <span class="icon iconfont">&#xe79b;</span>
+              <span class="icon iconfont">&#xe65d;</span>
                 <div class="name">搜索</div>
-                <div class="code-name">&amp;#xe79b;</div>
+                <div class="code-name">&amp;#xe65d;</div>
               </li>
           
             <li class="dib">
@@ -636,10 +636,10 @@
 <pre><code class="language-css"
 >@font-face {
   font-family: 'iconfont';
-  src: url('iconfont.woff2?t=1722244618943') format('woff2'),
-       url('iconfont.woff?t=1722244618943') format('woff'),
-       url('iconfont.ttf?t=1722244618943') format('truetype'),
-       url('iconfont.svg?t=1722244618943#iconfont') format('svg');
+  src: url('iconfont.woff2?t=1722303874159') format('woff2'),
+       url('iconfont.woff?t=1722303874159') format('woff'),
+       url('iconfont.ttf?t=1722303874159') format('truetype'),
+       url('iconfont.svg?t=1722303874159#iconfont') format('svg');
 }
 </code></pre>
           <h3 id="-iconfont-">第二步：定义使用 iconfont 的样式</h3>
